--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
 
   web:
     build: .
-    # Railsサーバのコンテナを落とすと、pidファイルが残るから次回起動時に削除。
+    # Railsサーバのコンテナを落とすと、pidファイルが残るから次回起動時に削除。+PUMAの起動
     command: bash -c "rm -f tmp/pids/server.pid && rails s -p 3000 -b '0.0.0.0'"
     volumes:
       - .:/weedock
