--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -15,16 +15,10 @@ RUN mkdir /weedock
 ENV APP_ROOT /weedock
 WORKDIR $APP_ROOT
 
-# ホスト側のGemfileを追加する
+# ホスト側（ローカル）のGemfileを追加する
 COPY ./Gemfile $APP_ROOT/Gemfile
 COPY ./Gemfile.lock $APP_ROOT/Gemfile.lock
 
 # Gemfileのbundle install
 RUN bundle install
 COPY . $APP_ROOT
-
-ENV RAILS_ENV production
-ENV RAILS_SERVE_STATIC_FILES true
-ENV RAILS_LOG_TO_STDOUT true
-RUN rails assets:precompile
-CMD bash -c "rails db:create && rails db:migrate && rails s -b '0.0.0.0'"
