--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,9 +11,11 @@ services:
       MYSQL_ROOT_PASSWORD: password
 
   web:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
     # Railsサーバのコンテナを落とすと、pidファイルが残るから次回起動時に削除。+PUMAの起動
-    command: bash -c "rm -f tmp/pids/server.pid && rails s -p 3000 -b '0.0.0.0'"
+    command: bash -c "bundle && bundle exec rails db:migrate && rm -f tmp/pids/server.pid && rails s -p 3000 -b '0.0.0.0'"
     volumes:
       - .:/weedock
     ports:
