docker_production_Preparation

--- a/config/database.yml
+++ b/config/database.yml
@@ -50,5 +50,5 @@ test:
 production:
   <<: *default
   database: weedock_production
-  username: weedock
-  password: <%= ENV['WEEDOCK_DATABASE_PASSWORD'] %>
+  # username: weedock
+  # password: <%= ENV['WEEDOCK_DATABASE_PASSWORD'] %>
