--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,11 +13,11 @@ services:
   web:
     build:
       context: .
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
     # Railsサーバのコンテナを落とすと、pidファイルが残るから次回起動時に削除。+PUMAの起動
-    command: bash -c "bundle && bundle exec rails db:migrate && rm -f tmp/pids/server.pid && rails s -p 3000 -b '0.0.0.0'"
-    volumes:
-      - .:/weedock
+    # command: bash -c "bundle && bundle exec rails db:migrate && rm -f tmp/pids/server.pid && rails s -p 3000 -b '0.0.0.0'"
+    # volumes:
+    #   - .:/weedock
     ports:
       - "3000:3000"
     links:
