--- a/config/database.yml
+++ b/config/database.yml
@@ -36,6 +36,7 @@ production:
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: <%= ENV["MYSQL_USERNAME"] %>
   password: <%= ENV["MYSQL_PASSWORD"] %>
+  # database: <%= ENV.fetch("MYSQL_DATABASE") { "vote_development" } %>
   socket: "/cloudsql/<%= ENV["INSTANCE_CONNECTION_NAME"] %>"
 
 # As with config/secrets.yml, you never want to store sensitive information,
