--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    # Railsサーバのコンテナを落とすと、pidファイルが残るから次回起動時に削除。+PUMAの起動
+    # Railsサーバのコンテナを落とすと、pidファイルが残るから次回起動時に削除。+PUMAの起動(本番構成の時は下記の、ommand: volumes: - の3つをコメントアウト)
     # command: bash -c "bundle && bundle exec rails db:migrate && rm -f tmp/pids/server.pid && rails s -p 3000 -b '0.0.0.0'"
     # volumes:
     #   - .:/weedock
