--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,24 +1,22 @@
-FROM ruby:2.5.3
-
-# 必要なパッケージのインストール
-RUN apt-get update -qq && \
-    apt-get install -y build-essential \
-                        libpq-dev
-
-# nodejsのバージョンをup
-RUN curl -sL https://deb.nodesource.com/setup_12.x | bash -
-RUN apt-get install -y nodejs
-
-# 作業ディレクトリの作成、設定
+FROM ruby:2.5.3-alpine
 RUN mkdir /weedock
-##作業ディレクトリ名をAPP_ROOTに割り当てて、以下$APP_ROOTで参照
-ENV APP_ROOT /weedock
-WORKDIR $APP_ROOT
-
-# ホスト側（ローカル）のGemfileを追加する
-COPY ./Gemfile $APP_ROOT/Gemfile
-COPY ./Gemfile.lock $APP_ROOT/Gemfile.lock
-
-# Gemfileのbundle install
+ENV ROOT="/weedock"
+WORKDIR ${ROOT}
+# 必要なパッケージのインストール
+RUN apk add --no-cache --update build-base \
+                                linux-headers \
+                                git \
+                                mysql-client \
+                                mysql-dev \
+                                nodejs \
+                                tzdata\
+                                openssh \
+                                build-base \
+                                libxml2-dev \
+                                libxslt-dev \
+                                yarn \
+                                curl-dev
+COPY Gemfile ${ROOT}
+COPY Gemfile.lock ${ROOT}
 RUN bundle install
-COPY . $APP_ROOT
+COPY . ${ROOT}
