--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -6,6 +6,7 @@ WORKDIR ${ROOT}
 RUN apk add --no-cache --update build-base \
                                 linux-headers \
                                 git \
+                                imagemagick\
                                 mysql-client \
                                 mysql-dev \
                                 nodejs \
